[package]
name = "azymus"
version = "0.1.0"
authors = ["Nathan Douglas <github@tenesm.us>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
rand = "0.3.9"
tcod = { version = "0.15", features = ["serialization"] }

[lib]
name = "azymus"
path = "src/lib.rs"

[[bin]]
name = "azymus"
path = "src/main.rs"
