[package]
name = "azymus"
version = "0.1.0"
authors = ["Nathan Douglas <github@tenesm.us>"]
edition = "2018"

[dependencies]
bear-lib-terminal = "2.0.0"
log = "0.4"
ntree = "0.1"
num = "0.2"
pretty_env_logger = "0.3"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tcod = { version = "0.15", features = ["serialization"] }


[lib]
name = "azymus"
path = "src/lib.rs"

[[bin]]
name = "azymus"
path = "src/main.rs"
